--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -164,7 +164,7 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  text-align:center;
  height:500px;
  width:100%;
- background-image:url(%%sbstare%%);
+ background-image:url(%%piggy-belle%%);
  background-repeat:no-repeat;
  margin-bottom:-25px;
  background-position: bottom center;
@@ -1293,7 +1293,7 @@ a.author[href$="Ootachiful"] {font-size:0!important; overflow:hidden; display:in
 a.author[href$="Ootachiful"]:before {font-size:10px!important; visibility:visible!important; content: "Ohhitachiful "}
 
 a.author[href$="french_guy_al"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="french_guy_al"]:before {font-size:10px!important; visibility:visible!important; content: "everton_relegated_al "}
+a.author[href$="french_guy_al"]:before {font-size:10px!important; visibility:visible!important; content: "french_gal_al "}
 
 a.author[href$="TheDarkPR101"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="TheDarkPR101"]:before {font-size:10px!important; visibility:visible!important; content: "TsarDarkPR101 "}
@@ -1398,3 +1398,7 @@ z-index:9000}
 .midcol,.last-clicked.midcol{overflow:visible!important}
 
 .res-commentBoxes .commentarea .comment{overflow:visible!important}
+
+/* * {
+    font-family: wingdings
+}*/
