--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -226,13 +226,13 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%crackle-portal%%);
- width:72px;
- height:42px;
- margin-top:-18px;
+ background:url(%%twilight-hat%%);
+ width:65px;
+ height:54px;
+ margin-top:-29px;
  margin-left:5px;
  margin-bottom:0px;
- margin-right:-39px;
+ margin-right:-50px;
 }
 
 .thumbnail:empty{background-image:url(%%thumbnails%%)!important}
