--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -443,7 +443,7 @@ a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[hr
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70b 'motes */
-a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/pinkieainthavingthatshit"]
+a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/pinkieainthavingthatshit"], a[href|="/ppyay"]
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -475,7 +475,7 @@ a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly
 {background-image:url(%%150x150d%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150e 'motes */
-a[href|="/boopening"], a[href|="/agentt"], a[href|="/hoodiedash"]
+a[href|="/boopening"], a[href|="/agentt"], a[href|="/hoodiedash"], a[href|="/shyhoodie"]
 {background-image:url(%%150x150e%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -540,7 +540,7 @@ a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|
 {background-image:url(%%misfitsk%%);display:block;float:left;}
 
 /* Misfits l */
-a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"], a[href|="/swappleaww"], a[href|="/flutterbutter"], a[href|="/twilightthebearded"], a[href|="/creepershy"], a[href|="/engineeraj"], a[href|="/youflunk"], a[href|="/bloombatsquee"], a[href|="/bloombow"], a[href|="/sockies"]
+a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"], a[href|="/swappleaww"], a[href|="/flutterbutter"], a[href|="/twilightthebearded"], a[href|="/creepershy"], a[href|="/engineeraj"], a[href|="/youflunk"], a[href|="/bloombatsquee"], a[href|="/bloombow"], a[href|="/sockies"], a[href|="/enormoussnake"], a[href|="/eponawearsitbetter"]
 {background-image:url(%%misfitsl%%);display:block;float:left;}
 
 /*
@@ -560,7 +560,7 @@ a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebein
 {background-position: -200% 0%;}
 
 /* Grid pos 0,1 'motes */
-a[href|="/twihappycry"], a[href|="/nightmaresparkle"], a[href|="/nomakeup"], a[href|="/lemonglee"], a[href|="/derpyshrug"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/pinkiefly"], a[href|="/ghastly"], a[href|="/fluttersnake"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/dashthefuck"]
+a[href|="/twihappycry"], a[href|="/nightmaresparkle"], a[href|="/nomakeup"], a[href|="/lemonglee"], a[href|="/derpyshrug"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/pinkiefly"], a[href|="/ghastly"], a[href|="/fluttersnake"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/dashthefuck"], a[href|="/shyhoodie"]
 {background-position: 0 -100%;}
 
 /* Grid pos 1,1 'motes */
@@ -640,7 +640,7 @@ a[href|="/pinkiestare"], a[href|="/nerdoctavia"], a[href|="/nerdtavi"], a[href|=
 {background-position: -100% -700%;}
 
 /* Grid pos 2,7 'motes */
-a[href|="/shibetwi"], a[href|="/rdtwicrazy"], a[href|="/apathiaunsure"]
+a[href|="/shibetwi"], a[href|="/rdtwicrazy"], a[href|="/apathiaunsure"], a[href|="/ppyay"]
 {background-position: -200% -700%;}
 
 /* Grid pos 0,8 'motes */
@@ -1236,3 +1236,5 @@ a[href|="/youflunk"] {width:87px;height:135px;background-position: -615px 0;}
 a[href|="/bloombatsquee"] {width:99px;height:120px;background-position: -603px -135px;}
 a[href|="/bloombow"] {width:125px;height:150px;background-position: -519px -255px;}
 a[href|="/sockies"] {width:200px;height:140px;background-position: -319px -373px;}
+a[href|="/enormoussnake"] {width:125px;height:112px;background-position: -194px -392px;}
+a[href|="/eponawearsitbetter"] {width:165px;height:200px;background-position: -519px -405px;}
